--- a/receiver/pom.xml
+++ b/receiver/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.boofcv</groupId>
+            <artifactId>boofcv-io</artifactId>
+            <version>0.39</version>  <!-- 请使用最新版本 -->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
