--- a/sender/pom.xml
+++ b/sender/pom.xml
@@ -16,6 +16,7 @@
             <groupId>org.wowtools.qrtransfer</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
